able to put video behind. need to fix margins/borders/etc and mmove logo

--- a/main.css
+++ b/main.css
@@ -25,9 +25,6 @@ video#bgvid {
 }
 */
 
-#video_box{
-    float:left;
-}
 /*
 #video_overlays {
 position:absolute;
@@ -45,23 +42,39 @@ float:left;
     ),
   height: 550px; 
   background-size: cover;
+  position: relative;
+  overflow: hidden;
 }
 
-.jumbotron .bgvid {
-    background: linear-gradient(
-      rgba(29, 35, 42, 0.1), 
-      rgba(29, 35, 42, 0.1)
-    ),
-  height: 550px; 
-  background-size: cover;
-}
-
-.jumbotron .image {
+.jumbotron .image{
   background: url(finallogo.png) no-repeat;
   background-size: 300px;
   padding-top: 50px;
   margin-top: 70px;
+  margin-left: auto;
+  margin-right: auto;
   padding-bottom: 130px;
+}
+
+.jumbotron:row {
+  content: '';
+  width: 100%;
+  height: 100%;
+  padding-right: 40px;
+  background: rgba(0, 0, 0, 0.5);
+  border-radius: 5px;
+}
+
+.jumbotron video {
+    position: absolute;
+    z-index: 0;
+    background-size: 100% 100%;
+    top: 0px;
+    left: 0px; /* fixed to left. Replace it by right if you want.*/
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;;
 }
 
 .jumbotron .tagline {
